--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,7 @@ dependencies {
 	runtimeOnly 'mysql:mysql-connector-java'
 
 	compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.2.0.Final'
+	compile group: 'br.com.six2six', name: 'fixture-factory', version: '3.1.0'
 	compileOnly 'org.mapstruct:mapstruct-processor:1.2.0.Final'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.2.0.Final'
 
