Atualização dos endpoint e criação da estrutura flyway

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,9 @@ spring:
     url: jdbc:mysql://${API_DATABASE_URL}/${API_DATABASE_NAME}?createDatabaseIfNotExist=false&useSSL=${API_DATABASE_USE_SSL}&serverTimezone=America/Sao_Paulo&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8
     username: ${API_DATABASE_USERNAME}
     password: ${API_DATABASE_PASSWORD}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+
   jpa:
     show-sql: true
     hibernate:
@@ -18,3 +21,12 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
+  flyway:
+    url: jdbc:mysql://${API_DATABASE_URL}/${API_DATABASE_NAME}?createDatabaseIfNotExist=false&useSSL=${API_DATABASE_USE_SSL}&serverTimezone=America/Sao_Paulo&allowPublicKeyRetrieval=true&useUnicode=true&characterEncoding=UTF-8
+    username: ${API_DATABASE_USERNAME}
+    password: ${API_DATABASE_PASSWORD}
+    locations: classpath:db/migration/mysql
+    ignoreIgnoredMigrations: false
+    enabled: true
+    baseline-on-migrate: true
+
