--- a/build.gradle
+++ b/build.gradle
@@ -12,12 +12,16 @@ buildscript {
 
 plugins {
 
+	id 'org.flywaydb.flyway' version '5.2.4'
 	id 'org.springframework.boot' version '2.3.1.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
-	id 'java'
 
 }
 
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'java'
+apply plugin: 'jacoco'
 
 group = 'br.com.linx'
 version = '0.0.1-SNAPSHOT'
@@ -34,16 +38,27 @@ ext {
 	set('swaggerVersion', "2.9.2")
 }
 
+
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
+	//implementation 'org.flywaydb:flyway-core:5.2.4'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	runtimeOnly 'mysql:mysql-connector-java'
+
+
+
+	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.6.RELEASE'
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
+//	compile 'org.flywaydb:flyway-core:5.2.4'
+//	flywayMigration 'com.mygroupid:my-lib:1.2.3'
+// novo acima
 
 	compile group: 'org.mapstruct', name: 'mapstruct-jdk8', version: '1.2.0.Final'
 	compile group: 'br.com.six2six', name: 'fixture-factory', version: '3.1.0'
@@ -59,6 +74,8 @@ dependencies {
 
 	testCompileOnly 'org.projectlombok:lombok:1.18.12'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.12'
+
+	testCompile('org.flywaydb.flyway-test-extensions:flyway-spring-test:5.2.4')
 
 
 }
