--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -1,6 +1,8 @@
+
 spring:
   application:
     name: card-validator
-  cloud:
-    config:
-      uri: http://localhost:8888
+
+##  cloud:
+##    config:
+##      uri: http://localhost:8888
