--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
-	//implementation 'org.flywaydb:flyway-core:5.2.4'
+	implementation 'org.flywaydb:flyway-core:5.2.4'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
@@ -56,7 +56,7 @@ dependencies {
 
 	compile group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.1.6.RELEASE'
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.12'
-//	compile 'org.flywaydb:flyway-core:5.2.4'
+	compile 'org.flywaydb:flyway-core:5.2.4'
 //	flywayMigration 'com.mygroupid:my-lib:1.2.3'
 // novo acima
 
